[gd_scene load_steps=8 format=4 uid="uid://dkf6p0baypmt2"]

[ext_resource type="Script" uid="uid://cdomoxx0xnseg" path="res://worldmap/expedition_hexagon_game/hexagon_game.gd" id="1_0e48y"]
[ext_resource type="Texture2D" uid="uid://balabdswh40cu" path="res://worldmap/expedition_hexagon_game/footstep_clue_icon.png" id="3_q6r6c"]
[ext_resource type="Texture2D" uid="uid://dxuelx22whjuj" path="res://worldmap/expedition_hexagon_game/vegetation_clue_icon.png" id="4_kdubu"]
[ext_resource type="Texture2D" uid="uid://vqobp5lxkd43" path="res://worldmap/expedition_hexagon_game/hexagon-sheet2.png" id="5_5d0pb"]
[ext_resource type="Texture2D" uid="uid://ca4almmft16xp" path="res://worldmap/expedition_hexagon_game/dropping_clue_icon.png" id="5_kdubu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wr13b"]
texture = ExtResource("5_5d0pb")
texture_region_size = Vector2i(64, 96)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 16)
0:0/0/y_sort_origin = 30
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, 16)
1:0/0/y_sort_origin = 30
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, 16)
2:0/0/y_sort_origin = 30
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, 16)
3:0/0/y_sort_origin = 30
0:1/0 = 0
0:1/0/texture_origin = Vector2i(0, 16)
0:1/0/modulate = Color(0.629675, 0.629675, 0.629675, 1)
0:1/0/y_sort_origin = 30
1:1/0 = 0
1:1/0/texture_origin = Vector2i(0, 16)
1:1/0/modulate = Color(0.629675, 0.629675, 0.629675, 1)
1:1/0/y_sort_origin = 30
2:1/0 = 0
2:1/0/texture_origin = Vector2i(0, 16)
2:1/0/modulate = Color(0.629675, 0.629675, 0.629675, 1)
2:1/0/y_sort_origin = 30
3:1/0 = 0
3:1/0/texture_origin = Vector2i(0, 16)
3:1/0/modulate = Color(0.629675, 0.629675, 0.629675, 1)
3:1/0/y_sort_origin = 30
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0

[sub_resource type="TileSet" id="TileSet_epypp"]
tile_shape = 3
tile_offset_axis = 1
tile_size = Vector2i(64, 56)
sources/0 = SubResource("TileSetAtlasSource_wr13b")

[node name="Hexagon_game" type="Node2D"]
script = ExtResource("1_0e48y")
footstep_icon = ExtResource("3_q6r6c")
disturbed_vegetation_icon = ExtResource("4_kdubu")
dropping_icon = ExtResource("5_kdubu")

[node name="TileLabel" type="Label" parent="."]
offset_left = 629.0
offset_top = 107.0
offset_right = 669.0
offset_bottom = 130.0
text = "(0, 0)"

[node name="SafariTilemap" type="TileMapLayer" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
texture_filter = 1
position = Vector2(86, 267)
tile_map_data = PackedByteArray("AAAAAAAAAAABAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAACAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAABAAAAAAAAAAYAAAABAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAABAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAABAAAAAAAAAA4AAAAAAAAAAAAAAA8AAAABAAAAAAABAAAAAAABAAAAAAABAAEAAAACAAAAAAABAAIAAAABAAAAAAABAAMAAAAAAAAAAAABAAQAAAABAAAAAAABAAUAAAACAAAAAAABAAYAAAAAAAAAAAABAAcAAAABAAAAAAABAAgAAAABAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAABAAAAAAABAAwAAAAAAAAAAAABAA0AAAABAAAAAAABAA4AAAABAAAAAAABAA8AAAABAAAAAAACAAAAAAABAAAAAAACAAEAAAAAAAAAAAACAAIAAAACAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAACAAAAAAACAAYAAAACAAAAAAACAAcAAAACAAAAAAACAAgAAAABAAAAAAACAAkAAAACAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAACAAwAAAACAAAAAAACAA0AAAACAAAAAAACAA4AAAABAAAAAAACAA8AAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAACAAAAAAADAAIAAAADAAAAAAADAAMAAAABAAAAAAADAAQAAAACAAAAAAADAAUAAAACAAAAAAADAAYAAAACAAAAAAADAAcAAAABAAAAAAADAAgAAAACAAAAAAADAAkAAAACAAAAAAADAAoAAAADAAAAAAADAAsAAAACAAAAAAADAAwAAAACAAAAAAADAA0AAAACAAAAAAADAA4AAAABAAAAAAADAA8AAAAAAAAAAAAEAAAAAAABAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAABAAAAAAAEAAMAAAADAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAABAAAAAAAEAAYAAAABAAAAAAAEAAcAAAABAAAAAAAEAAgAAAABAAAAAAAEAAkAAAACAAAAAAAEAAoAAAAAAAAAAAAEAAsAAAABAAAAAAAEAAwAAAACAAAAAAAEAA0AAAACAAAAAAAEAA4AAAADAAAAAAAEAA8AAAABAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAABAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAABAAAAAAAFAAcAAAABAAAAAAAFAAgAAAABAAAAAAAFAAkAAAABAAAAAAAFAAoAAAABAAAAAAAFAAsAAAACAAAAAAAFAAwAAAACAAAAAAAFAA0AAAADAAAAAAAFAA4AAAAAAAAAAAAFAA8AAAAAAAAAAAAGAAAAAAABAAAAAAAGAAEAAAABAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAADAAAAAAAGAAYAAAADAAAAAAAGAAcAAAACAAAAAAAGAAgAAAACAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAGAAsAAAAAAAAAAAAGAAwAAAAAAAAAAAAGAA0AAAAAAAAAAAAGAA4AAAAAAAAAAAAGAA8AAAABAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAACAAAAAAAHAAMAAAABAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAADAAAAAAAHAAYAAAACAAAAAAAHAAcAAAACAAAAAAAHAAgAAAACAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAABAAAAAAAHAAsAAAAAAAAAAAAHAAwAAAABAAAAAAAHAA0AAAACAAAAAAAHAA4AAAACAAAAAAAHAA8AAAABAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAABAAAAAAAIAAIAAAACAAAAAAAIAAMAAAACAAAAAAAIAAQAAAABAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAACAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAABAAAAAAAIAAoAAAAAAAAAAAAIAAsAAAAAAAAAAAAIAAwAAAACAAAAAAAIAA0AAAACAAAAAAAIAA4AAAACAAAAAAAIAA8AAAAAAAAAAAAJAAAAAAABAAAAAAAJAAEAAAABAAAAAAAJAAIAAAABAAAAAAAJAAMAAAABAAAAAAAJAAQAAAABAAAAAAAJAAUAAAABAAAAAAAJAAYAAAABAAAAAAAJAAcAAAABAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAABAAAAAAAJAAwAAAACAAAAAAAJAA0AAAABAAAAAAAJAA4AAAAAAAAAAAAJAA8AAAABAAAAAAAKAAAAAAABAAAAAAAKAAEAAAABAAAAAAAKAAIAAAABAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAABAAAAAAAKAAYAAAABAAAAAAAKAAcAAAABAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAABAAAAAAAKAAsAAAAAAAAAAAAKAAwAAAAAAAAAAAAKAA0AAAABAAAAAAAKAA4AAAAAAAAAAAAKAA8AAAAAAAAAAAD//wkAAAAAAAEAAAD//woAAAAAAAEAAAD+/wsAAAAAAAEAAAD+/wwAAAAAAAEAAAD+/woAAAAAAAEAAAD+/w0AAAAAAAEAAAD//wsAAAAAAAEAAAD//wwAAAAAAAEAAAD+/w4AAAAAAAEAAAD+/w8AAAAAAAEAAAD//w4AAAAAAAEAAAD//w0AAAAAAAEAAAD//w8AAAAAAAEAAAD+/xAAAAAAAAEAAAAAABAAAAAAAAEAAAABABAAAAAAAAEAAAACABAAAAAAAAEAAAD//xAAAAAAAAEAAAAAABEAAAAAAAEAAAADABAAAAAAAAEAAAACABEAAAAAAAEAAAAEABAAAAAAAAEAAAAEABEAAAAAAAEAAAAFABAAAAAAAAEAAAAFABEAAAACAAEAAAAGABAAAAAAAAEAAAAGABEAAAAAAAEAAAAHABAAAAAAAAEAAAAHABEAAAACAAEAAAAIABAAAAAAAAEAAAAIABEAAAAAAAEAAAAJABAAAAAAAAEAAAAJABEAAAACAAEAAAAKABAAAAAAAAEAAAAKABEAAAACAAEAAAALABAAAAAAAAEAAAALAA8AAAAAAAEAAAAMAA8AAAAAAAEAAAAMAA4AAAAAAAEAAAAMAA0AAAAAAAEAAAAMAAwAAAAAAAEAAAALAA4AAAAAAAEAAAALAA0AAAAAAAEAAAALAAwAAAAAAAEAAAALAAsAAAAAAAEAAAAMAAsAAAAAAAEAAAALAAoAAAAAAAEAAAAMAAoAAAAAAAEAAAALAAkAAAAAAAEAAAAMAAkAAAAAAAEAAAALAAgAAAAAAAEAAAAMAAgAAAAAAAEAAAALAAcAAAAAAAEAAAAMAAcAAAAAAAEAAAALAAYAAAAAAAEAAAAMAAYAAAAAAAEAAAAMAAUAAAAAAAEAAAALAAQAAAAAAAEAAAAMAAQAAAAAAAEAAAALAAMAAAAAAAEAAAAMAAMAAAAAAAEAAAALAAIAAAAAAAEAAAAMAAIAAAAAAAEAAAALAAEAAAAAAAEAAAAMAAEAAAAAAAEAAAALAAAAAAAAAAEAAAAMAAAAAAAAAAEAAAALAAUAAAAAAAEAAAALAP//AAAAAAEAAAAMAP//AAAAAAEAAAAKAP7/AAAAAAEAAAAKAP//AAAAAAEAAAAJAP7/AAAAAAEAAAAJAP//AAAAAAEAAAAIAP//AAAAAAEAAAAIAP7/AAAAAAEAAAAHAP7/AAAAAAEAAAAHAP//AAAAAAEAAAAGAP7/AAAAAAEAAAAGAP//AAAAAAEAAAAFAP7/AAAAAAEAAAAFAP//AAAAAAEAAAAEAP//AAAAAAEAAAAEAP7/AAAAAAEAAAADAP7/AAAAAAEAAAADAP//AAAAAAEAAAACAP//AAAAAAEAAAACAP7/AAAAAAEAAAABAP7/AAAAAAEAAAABAP//AAAAAAEAAAAAAP//AAAAAAEAAAAAAP7/AAAAAAEAAAD/////AAAAAAEAAAD//wAAAAAAAAEAAAD//wEAAAAAAAEAAAD//wIAAAAAAAEAAAD//wMAAAAAAAEAAAD//wQAAAAAAAEAAAD//wUAAAAAAAEAAAD//wYAAAAAAAEAAAD//wcAAAAAAAEAAAD//wgAAAAAAAEAAAD+/wkAAAAAAAEAAAD+/wgAAAAAAAEAAAD+/wcAAAAAAAEAAAD+/wYAAAAAAAEAAAD+/wUAAAAAAAEAAAD+/wQAAAAAAAEAAAD+/wMAAAAAAAEAAAD+/wIAAAAAAAEAAAD+/wEAAAAAAAEAAAD+/wAAAAAAAAEAAAD+////AAAAAAEAAAD///7/AAAAAAEAAAALAP7/AAAAAAEAAAAMABAAAAAAAAEAAAABABEAAAACAAEAAAADABEAAAACAAEAAAD+//7/AAACAAEAAAD///3/AAACAAEAAAAAAP3/AAACAAEAAAABAP3/AAACAAEAAAACAP3/AAACAAEAAAADAP3/AAACAAEAAAAEAP3/AAACAAEAAAAFAP3/AAACAAEAAAAGAP3/AAACAAEAAAAHAP3/AAACAAEAAAAIAP3/AAACAAEAAAAJAP3/AAACAAEAAAAKAP3/AAACAAEAAAALAP3/AAACAAEAAAAMAP3/AAACAAEAAAAMAP7/AAACAAEAAAALAPz/AAACAAEAAAAJAPz/AAACAAEAAAAHAPz/AAACAAEAAAAFAPz/AAACAAEAAAADAPz/AAACAAEAAAABAPz/AAACAAEAAAD///z/AAACAAEAAAD+//3/AAACAAEAAAD+//z/AAACAAEAAAAAAPz/AAACAAEAAAACAPz/AAACAAEAAAAEAPz/AAACAAEAAAAGAPz/AAACAAEAAAAIAPz/AAACAAEAAAAKAPz/AAACAAEAAAAMAPz/AAACAAEAAAANAP3/AAACAAEAAAANAP7/AAACAAEAAAANAP//AAACAAEAAAANAAAAAAACAAEAAAANAAEAAAACAAEAAAAOAAIAAAACAAEAAAANAAIAAAACAAEAAAAOAAMAAAACAAEAAAANAAMAAAACAAEAAAAOAAQAAAACAAEAAAANAAQAAAACAAEAAAAOAAUAAAACAAEAAAANAAUAAAACAAEAAAAOAAYAAAACAAEAAAANAAYAAAACAAEAAAANAAcAAAACAAEAAAANAAgAAAACAAEAAAANAAkAAAACAAEAAAANAAoAAAACAAEAAAAOAAsAAAACAAEAAAANAAsAAAACAAEAAAD9//z/AAACAAEAAAD9//3/AAACAAEAAAD9//7/AAACAAEAAAD9////AAACAAEAAAD9/wAAAAACAAEAAAD9/wEAAAACAAEAAAD9/wIAAAACAAEAAAD9/wMAAAACAAEAAAD8/wQAAAACAAEAAAD9/wQAAAACAAEAAAD8/wUAAAACAAEAAAD9/wUAAAACAAEAAAD8/wYAAAACAAEAAAD9/wYAAAACAAEAAAD8/wcAAAACAAEAAAD9/wcAAAACAAEAAAD8/wgAAAACAAEAAAD9/wgAAAACAAEAAAD8/wkAAAACAAEAAAD9/wkAAAACAAEAAAD8/wMAAAACAAEAAAD8/wIAAAACAAEAAAD8/wEAAAACAAEAAAD8/wAAAAACAAEAAAD8////AAACAAEAAAD8//7/AAACAAEAAAD8//3/AAACAAEAAAAOAAcAAAACAAEAAAAOAAgAAAACAAEAAAAOAAkAAAACAAEAAAAOAAoAAAACAAEAAAAOAAwAAAACAAEAAAANAAwAAAACAAEAAAAOAA0AAAACAAEAAAANAA0AAAACAAEAAAANAA4AAAACAAEAAAANAA8AAAACAAEAAAANABAAAAACAAEAAAAOABAAAAACAAEAAAAOAA8AAAACAAEAAAAOAA4AAAACAAEAAAAMABEAAAACAAEAAAD+/xEAAAACAAEAAAD9/woAAAACAAEAAAD9/wsAAAACAAEAAAD9/wwAAAACAAEAAAD9/w0AAAACAAEAAAD9/w4AAAACAAEAAAD9/w8AAAACAAEAAAD9/xAAAAACAAEAAAD9/xEAAAACAAEAAAD8/xEAAAACAAEAAAD8/xAAAAACAAEAAAD8/w8AAAACAAEAAAD8/w4AAAACAAEAAAD8/w0AAAACAAEAAAD8/wwAAAACAAEAAAD8/wsAAAACAAEAAAD8/woAAAACAAEAAAAMABIAAAACAAEAAAALABEAAAACAAEAAAALABIAAAACAAEAAAAKABIAAAACAAEAAAAJABIAAAACAAEAAAAIABIAAAACAAEAAAAIABMAAAACAAEAAAAGABIAAAACAAEAAAAGABMAAAACAAEAAAAHABIAAAACAAEAAAAFABIAAAACAAEAAAAEABIAAAACAAEAAAADABIAAAACAAEAAAAEABMAAAACAAEAAAACABIAAAACAAEAAAAAABIAAAACAAEAAAABABIAAAACAAEAAAACABMAAAACAAEAAAAAABMAAAACAAEAAAD//xEAAAACAAEAAAD+/xIAAAACAAEAAAD//xIAAAACAAEAAAD8/xIAAAACAAEAAAD9/xIAAAACAAEAAAD+/xMAAAACAAEAAAABABMAAAACAAEAAAADABMAAAACAAEAAAAFABMAAAACAAEAAAAHABMAAAACAAEAAAAIABQAAAACAAEAAAAJABMAAAACAAEAAAAKABQAAAACAAEAAAALABMAAAACAAEAAAAKABMAAAACAAEAAAAMABMAAAACAAEAAAANABIAAAACAAEAAAAMABQAAAACAAEAAAANABMAAAACAAEAAAAGABQAAAACAAEAAAAHABQAAAACAAEAAAAIABUAAAACAAEAAAAEABQAAAACAAEAAAAFABQAAAACAAEAAAACABQAAAACAAEAAAAAABQAAAACAAEAAAABABQAAAACAAEAAAD//xMAAAACAAEAAAADABQAAAACAAEAAAD+/xQAAAACAAEAAAD9/xMAAAACAAEAAAD//xQAAAACAAEAAAANABEAAAACAAEAAAAJABQAAAACAAEAAAD8//z/AAACAAEAAAD8//v/AAACAAEAAAD9//v/AAACAAEAAAD+//v/AAACAAEAAAD///v/AAACAAEAAAABAPv/AAACAAEAAAADAPv/AAACAAEAAAACAPv/AAACAAEAAAAFAPv/AAACAAEAAAAEAPv/AAACAAEAAAAHAPv/AAACAAEAAAAGAPv/AAACAAEAAAAJAPv/AAACAAEAAAAIAPv/AAACAAEAAAALAPv/AAACAAEAAAAKAPv/AAACAAEAAAANAPv/AAACAAEAAAAMAPv/AAACAAEAAAANAPz/AAACAAEAAAANAPr/AAACAAEAAAALAPr/AAACAAEAAAAJAPr/AAACAAEAAAAHAPr/AAACAAEAAAAFAPr/AAACAAEAAAADAPr/AAACAAEAAAABAPr/AAACAAEAAAAAAPv/AAACAAEAAAD///r/AAACAAEAAAD9//r/AAACAAEAAAA=")
tile_set = SubResource("TileSet_epypp")
collision_enabled = false
navigation_enabled = false

[node name="Debug" type="Button" parent="."]
offset_left = 639.0
offset_top = 1226.0
offset_right = 697.0
offset_bottom = 1257.0
text = "Debug"

[node name="Icons" type="Node2D" parent="."]
unique_name_in_owner = true
texture_filter = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 0.15
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TriesLabel" type="Label" parent="CanvasLayer/Control/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Tries left: 25"
horizontal_alignment = 1

[node name="QuitButton" type="Button" parent="CanvasLayer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 27.0
offset_top = 27.0
offset_right = 119.0
offset_bottom = 114.0
text = "X"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(308, 535)
zoom = Vector2(2, 2)
